# Intelligent_Data_Query

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
config/: intent_analysis_llm_cfg.json  result_format_llm_cfg.json
frontend/: app.js  index.html  style.css
scripts/: check_demo.ps1  create_readonly_user.sql  demo.ps1  init_mysql.sql  migrate_demo_schema.py
src/: auth.py  demo.py  main.py  session.py  settings.py
src/graphs/: graph.py  state.py
src/graphs/nodes/: chart_generation_node.py  data_query_node.py  intent_analysis_node.py  result_format_node.py
src/llm/: client.py
src/query/: schema.py  sql.py  summary.py
src/storage/: db_meta.py  mysql_db.py
src/tools/: chart_generator.py
tests/: test_core.py
