[project]
name = "aiquery"
version = "0.1.0"
description = "本地智能问数 - LangGraph + MySQL + DeepSeek"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "pymysql>=1.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
