[project]
name = "aiquery"
version = "0.1.0"
description = "智能问数（Intelligent Data Query） - LangGraph + MySQL + OpenAI-compatible LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "langgraph==1.2.6",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "jinja2==3.1.6",
    "matplotlib==3.11.0",
    "pymysql==2.2.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
